--- a/composer.json
+++ b/composer.json
@@ -9,9 +9,10 @@
     ],
     "require": {},
     "autoload": {
-        "classmap": [
-            "./"
-        ],
+        "psr-4": {
+            "App\\":"App/",
+            "Core\\":"Core/"
+        },
         "files": [
             "functions.php"
         ]
