--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,10 @@
             "email": "jago86@gmail.com"
         }
     ],
-    "require": {},
+    "require": {
+        "php-units-of-measure/php-units-of-measure": "^2.1",
+        "artack/color": "^0.6.0"
+    },
     "autoload": {
         "psr-4": {
             "App\\":"App/",
