--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
     ],
     "require": {
         "php-units-of-measure/php-units-of-measure": "^2.1",
-        "artack/color": "^0.6.0"
+        "artack/color": "^0.6.0",
+        "pecee/simple-router": "4.3.7.2"
     },
     "autoload": {
         "psr-4": {
